[package]
name = "murmurs"
description = "A reliable and production-ready implementation of the Murmur3 hash function in Rust"
repository = "https://github.com/owengombas/murmurs"
homepage = "https://github.com/owengombas/murmurs"
version = "1.0.0"
edition = "2024"
readme = "README.md"

[dependencies]
murmur3-binding = { path = "./murmur3-binding" } 
