[package]
name = "murmurs"
description = "🫆 A reliable and production-ready implementation of the Murmur3 hash function in Rust"
repository = "https://github.com/owengombas/murmurs"
homepage = "https://github.com/owengombas/murmurs"
version = "1.0.4"
edition = "2024"
readme = "README.md"
license = "MIT"
keywords = ["murmur3", "murmur", "hash", "hashing", "ffi"]
authors = ["Owen Gombas"]
exclude = [
    "murmur3-binding",
    ".github",
    "tests",
    "target",
]

[dev-dependencies]
murmur3-binding = { path = "./murmur3-binding" } 
