[package]
name = "murmur3-binding"
description = "A reliable and production-ready implementation of the Murmur3 hash function in Rust"
repository = "https://github.com/owengombas/murmurs"
homepage = "https://github.com/owengombas/murmurs"
version = "1.0.0"
edition = "2024"
readme = "README.md"
license = "MIT"
keywords = ["murmur3", "murmur", "hash", "hashing", "ffi"]
authors = ["Owen Gombas"]
exclude = [
    "murmur3-binding",
    ".github",
    "tests",
    "target",
]

[dependencies]

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
